--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,7 @@
             "type": "node",
             "request": "launch",
             "program": "${workspaceRoot}/messages/index.js",
-            "cwd": "${workspaceRoot}/messages",
-            "env": {
-                "NODE_ENV": "development"
-            }
+            "cwd": "${workspaceRoot}",
         }
     ]
 }
